[build-system]
build-backend = "sipbuild.api"

[project]
name="ElaWidgetTools"
license = { text = "MIT" }
authors = [{ name = "HIllya51" }]

[tool.sip]
project-factory = "pyqtbuild:PyQtProject"

[tool.sip.metadata]
name = "ElaWidgetTools"


[tool.sip.project]
sip-include-dirs = ["bindings"]
sip-files-dir = "./sip"

[tool.sip.bindings.ElaWidgetTools]
qmake-QT = ["widgets"]
include-dirs = ["./ElaWidgetTools/ElaWidgetTools"]
sip-file = "ElaWidgetTools.sip"
library-dirs = [ "./ElaWidgetTools/Release" ]
libraries = [
    "ElaWidgetTools", 
    "D3D11", "DXGI", "kernel32" ,"user32", "gdi32", "winspool" ,"comdlg32", "advapi32", "shell32", "ole32", "oleaut32", "uuid", "odbc32", "odbccp32"
]
