[build-system]
build-backend = "sipbuild.api"

[project]
name="ElaWidgetTools"
license = { text = "MIT" }
authors = [{ name = "HIllya51" }]

[tool.sip]
project-factory = "pyqtbuild:PyQtProject"

[tool.sip.metadata]
name = "ElaWidgetTools"


[tool.sip.project]
sip-include-dirs = ["bindings"]
sip-files-dir = "./sip"

[tool.sip.bindings.ElaWidgetTools]
qmake-QT = ["widgets"]
include-dirs = ["../../ElaWidgetTools/ElaWidgetTools"]
sip-file = "ElaWidgetTools.sip"
library-dirs = [ "../ElaWidgetTools/Release" ]
libraries = [ "ElaWidgetTools" ]

[tool.sip.builder]
qmake-settings = [
    "DEFINES += _SILENCE_ALL_MS_EXT_DEPRECATION_WARNINGS",
    "DEFINES += _HAS_CXX17=1",
    "DEFINES += _HAS_CXX20=1",
    "DEFINES += _CRT_SECURE_NO_WARNINGS",
    "QMAKE_CXXFLAGS += /std:c++17",
    "QMAKE_CXXFLAGS += /Zc:__cplusplus"
]